apply suggested changes

--- a/admin-customers.html
+++ b/admin-customers.html
@@ -44,7 +44,7 @@
         </a>
         <div class="col-md-10">
             <div class="d-flex justify-content-between">
-                <input class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
+                <input id="search" class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
 
                 <div class="d-flex ">
                     <a href="#" class="custom-bell-notification text-dark m-auto" aria-expanded="false">
@@ -52,7 +52,7 @@
                         <span class="notification" style="position: absolute;">5</span>
                     </a>
                     <div class="avatar m-auto">
-                        <img src="/img/avatar.png" alt="">
+                        <img src="./img/icon/user.png" alt="">
                     </div>
                     <a class="ml-3 dropdown-toggle text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="mr-3">Sơn Hà <br> Admin</span>
@@ -120,7 +120,7 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 bg-light">
-                <h2 id="page-title">Khách hàng</h2>
+                <h3 id="page-title" class="font-weight-bold">Khách hàng</h2>
                 <div class="table bg-white mt-2 p-4">
                     <div id="table-filter" class="row">
                         <div class="d-flex flex-column w-100">
@@ -168,7 +168,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">H</div>
-                                                <span class="ml-1 my-auto">Hà Nguyễn</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        Hà Nguyễn
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">hanguyen@gmail.com</td>
                                             <td class="border-0 align-middle">0983334212</td>
@@ -181,7 +185,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">M</div>
-                                                <span class="ml-1 my-auto">My Trần</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        My Trần
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">mytran12@gmail.com</td>
                                             <td class="border-0 align-middle">098567432</td>
@@ -194,7 +202,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">A</div>
-                                                <span class="ml-1 my-auto">An Nguyễn</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        An Nguyễn
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">annguyen@gmail.com</td>
                                             <td class="border-0 align-middle">0983334211</td>
@@ -207,7 +219,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">L</div>
-                                                <span class="ml-1 my-auto">Long Trần</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        Long Trần
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">longtran@gmail.com</td>
                                             <td class="border-0 align-middle">0983334210</td>
@@ -220,7 +236,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">L</div>
-                                                <span class="ml-1 my-auto">Lucas Đô</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        Lucas Đô
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">lucasdo@gmail.com</td>
                                             <td class="border-0 align-middle">0983134212</td>
@@ -233,7 +253,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">B</div>
-                                                <span class="ml-1 my-auto">Bạch Dương</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        Bạch Dương
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">bachduong@gmail.com</td>
                                             <td class="border-0 align-middle">083334212</td>
@@ -246,7 +270,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">N</div>
-                                                <span class="ml-1 my-auto">Nguyễn Thi</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        Nguyễn Thi
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">Nguyenthi@gmail.com</td>
                                             <td class="border-0 align-middle">0983334200</td>
