--- a/admin-employees.html
+++ b/admin-employees.html
@@ -44,7 +44,7 @@
         </a>
         <div class="col-md-10">
             <div class="d-flex justify-content-between">
-                <input class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
+                <input id="search" class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
 
                 <div class="d-flex ">
                     <a href="#" class="custom-bell-notification text-dark m-auto" aria-expanded="false">
@@ -52,7 +52,7 @@
                         <span class="notification" style="position: absolute;">5</span>
                     </a>
                     <div class="avatar m-auto">
-                        <img src="/img/avatar.png" alt="">
+                        <img src="./img/icon/user.png" alt="">
                     </div>
                     <a class="ml-3 dropdown-toggle text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="mr-3">Sơn Hà <br> Admin</span>
@@ -120,7 +120,7 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 bg-light">
-                <h2 id="page-title">Nhân viên</h2>
+                <h3 id="page-title" class="font-weight-bold">Nhân viên</h2>
                 <div class="table bg-white mt-2 p-4">
                     <div id="table-filter" class="row">
                         <div class="d-flex flex-column w-100">
@@ -171,7 +171,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">A</div>
-                                                <span class="ml-1 my-auto">Nguyễn Lạc An</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        Nguyễn Lạc An
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">annguyen@gmail.com</td>
                                             <td class="border-0 align-middle">0983334212</td>
@@ -184,7 +188,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">M</div>
-                                                <span class="ml-1 my-auto">Trần Khởi My</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        Trần Khởi My
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">mytran12@gmail.com</td>
                                             <td class="border-0 align-middle">098567432</td>
@@ -197,7 +205,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">A</div>
-                                                <span class="ml-1 my-auto">Nguyễn Như An</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        Nguyễn Như An
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">annguyen@gmail.com</td>
                                             <td class="border-0 align-middle">0983334211</td>
@@ -210,7 +222,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">L</div>
-                                                <span class="ml-1 my-auto">Chu Thê Long</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        Chu Thê Long
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">longtran@gmail.com</td>
                                             <td class="border-0 align-middle">0983334210</td>
@@ -223,7 +239,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">L</div>
-                                                <span class="ml-1 my-auto">Đô Thị Lợi</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        Đô Thị Lợi
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">lucasdo@gmail.com</td>
                                             <td class="border-0 align-middle">0983134212</td>
@@ -236,7 +256,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">B</div>
-                                                <span class="ml-1 my-auto">Lưu Như Bích</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        Lưu Như Bích
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">bachduong@gmail.com</td>
                                             <td class="border-0 align-middle">083334212</td>
@@ -249,7 +273,11 @@
                                             </td>
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">N</div>
-                                                <span class="ml-1 my-auto">Nguyễn Lưu Nguyên</span>
+                                                <span class="ml-1 my-auto">
+                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                        Nguyễn Lưu Nguyên
+                                                    </a>
+                                                </span>
                                             </td>
                                             <td class="border-0 align-middle">Nguyenthi@gmail.com</td>
                                             <td class="border-0 align-middle">0983334200</td>
