--- a/admin-news.html
+++ b/admin-news.html
@@ -31,7 +31,7 @@
         </a>
         <div class="col-md-10">
             <div class="d-flex justify-content-between">
-                <input class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
+                <input id="search" class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
 
                 <div class="d-flex ">
                     <a href="#" class="custom-bell-notification text-dark m-auto" aria-expanded="false">
@@ -39,7 +39,7 @@
                         <span class="notification" style="position: absolute;">5</span>
                     </a>
                     <div class="avatar m-auto">
-                        <img src="/img/avatar.png" alt="">
+                        <img src="./img/icon/user.png" alt="">
                     </div>
                     <a class="ml-3 dropdown-toggle text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="mr-3">Sơn Hà <br> Admin</span>
@@ -107,7 +107,7 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 bg-light">
-                <h2 id="page-title">Tin tức</h2>
+                <h3 id="page-title" class="font-weight-bold">Tin tức</h3>
                 <div class="table bg-white mt-2 p-4">
                     <div id="table-filter" class="row">
                         <div class="d-flex flex-column w-100">
@@ -155,7 +155,9 @@
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
                                             <td class="border-0 align-middle d-flex">
-                                                <img class="" src="img/news/1.png" alt="" style="max-height: 102px;">
+                                                <a href="/admin-new-edit.html">
+                                                    <img class="" src="img/news/1.png" alt="" style="max-height: 102px;">
+                                                </a>
                                             </td>
                                             <td class="border-0 align-middle">Những mẫu thời trang nổi tiếng đầu năm 2024</td>
                                             <td class="border-0 align-middle">12/03/2024</td>
@@ -166,7 +168,9 @@
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
                                             <td class="border-0 align-middle d-flex">
-                                                <img class="" src="img/news/1.png" alt="" style="max-height: 102px;">
+                                                <a href="/admin-new-edit.html">
+                                                    <img class="" src="img/news/1.png" alt="" style="max-height: 102px;">
+                                                </a>
                                             </td>
                                             <td class="border-0 align-middle">Phối áo thun và quần Jeans: 15 style cho nàng "thử sức"</td>
                                             <td class="border-0 align-middle">12/03/2024</td>
@@ -177,7 +181,9 @@
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
                                             <td class="border-0 align-middle d-flex">
-                                                <img class="" src="img/news/2.png" alt="" style="max-height: 102px;">
+                                                <a href="/admin-new-edit.html">
+                                                    <img class="" src="img/news/2.png" alt="" style="max-height: 102px;">
+                                                </a>
                                             </td>
                                             <td class="border-0 align-middle">3 cách mặc áo sơ mi bò denim nam cho chàng thêm nổi bật</td>
                                             <td class="border-0 align-middle">10/02/2024</td>
@@ -188,7 +194,9 @@
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
                                             <td class="border-0 align-middle d-flex">
-                                                <img class="" src="img/news/3.png" alt="" style="max-height: 102px;">
+                                                <a href="/admin-new-edit.html">
+                                                    <img class="" src="img/news/3.png" alt="" style="max-height: 102px;">
+                                                </a>
                                             </td>
                                             <td class="border-0 align-middle">Áo polo là gì ? </td>
                                             <td class="border-0 align-middle">30/01/2024</td>
