--- a/admin-order-detail.html
+++ b/admin-order-detail.html
@@ -32,7 +32,7 @@
         </a>
         <div class="col-md-10">
             <div class="d-flex justify-content-between">
-                <input class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
+                <input id="search" class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
 
                 <div class="d-flex ">
                     <a href="#" class="custom-bell-notification text-dark m-auto" aria-expanded="false">
@@ -40,7 +40,7 @@
                         <span class="notification" style="position: absolute;">5</span>
                     </a>
                     <div class="avatar m-auto">
-                        <img src="/img/avatar.png" alt="">
+                        <img src="./img/icon/user.png" alt="">
                     </div>
                     <a class="ml-3 dropdown-toggle text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="mr-3">Sơn Hà <br> Admin</span>
@@ -109,7 +109,7 @@
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 bg-light">
                 <a style="color: #5A607F;" href="./admin-orders.html"><span><i class="fa fa-arrow-left" aria-hidden="true"></i></span> Back</a>
-                <h2 id="page-title">Chi tiết đơn hàng</h2>
+                <h3 id="page-title" class="font-weight-bold">Chi tiết đơn hàng</h2>
                 <div class="row mt-4">
                     <div class="col-lg-7 col-md-7">
                         <div class="bg-white p-4">
