--- a/admin-orders.html
+++ b/admin-orders.html
@@ -31,7 +31,7 @@
         </a>
         <div class="col-md-10">
             <div class="d-flex justify-content-between">
-                <input class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
+                <input id="search" class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
 
                 <div class="d-flex ">
                     <a href="#" class="custom-bell-notification text-dark m-auto" aria-expanded="false">
@@ -39,7 +39,7 @@
                         <span class="notification" style="position: absolute;">5</span>
                     </a>
                     <div class="avatar m-auto">
-                        <img src="/img/avatar.png" alt="">
+                        <img src="./img/icon/user.png" alt="">
                     </div>
                     <a class="ml-3 dropdown-toggle text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="mr-3">Sơn Hà <br> Admin</span>
@@ -107,7 +107,7 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 bg-light">
-                <h2 id="page-title">Sản phẩm</h2>
+                <h3 id="page-title" class="font-weight-bold">Sản phẩm</h2>
                 <div class="table bg-white mt-2 p-4">
                     <div id="table-filter" class="row">
                         <div class="d-flex flex-column w-100">
@@ -153,7 +153,7 @@
                                             <td class="border-0 align-middle">
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
-                                            <td class="border-0 align-middle">233244</td>
+                                            <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">233244</a></td>
                                             <td class="border-0 align-middle">Nguyễn Hà</td>
                                             <td class="border-0 align-middle">12/03/2024</td>
                                             <td class="border-0 align-middle">Đang giao</td>
@@ -163,7 +163,7 @@
                                             <td class="border-0 align-middle">
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
-                                            <td class="border-0 align-middle">122346</td>
+                                            <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">122346</a></td>
                                             <td class="border-0 align-middle">My Trần</td>
                                             <td class="border-0 align-middle">12/03/2024</td>
                                             <td class="border-0 align-middle text-success">Hoàn thành</td>
@@ -173,7 +173,7 @@
                                             <td class="border-0 align-middle">
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
-                                            <td class="border-0 align-middle">167544</td>
+                                            <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">167544</a></td>
                                             <td class="border-0 align-middle">An Nguyễn</td>
                                             <td class="border-0 align-middle">11/03/2024</td>
                                             <td class="border-0 align-middle text-success">Hoàn thành</td>
@@ -183,7 +183,7 @@
                                             <td class="border-0 align-middle">
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
-                                            <td class="border-0 align-middle">334245</td>
+                                            <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">334245</a></td>
                                             <td class="border-0 align-middle">Lucas Đô</td>
                                             <td class="border-0 align-middle">11/03/2024</td>
                                             <td class="border-0 align-middle text-success">Hoàn thành</td>
@@ -193,7 +193,7 @@
                                             <td class="border-0 align-middle">
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
-                                            <td class="border-0 align-middle">232455</td>
+                                            <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">232455</a></td>
                                             <td class="border-0 align-middle">Long Trần</td>
                                             <td class="border-0 align-middle">11/03/2024</td>
                                             <td class="border-0 align-middle text-danger">Hoàn trả</td>
@@ -203,7 +203,7 @@
                                             <td class="border-0 align-middle">
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
-                                            <td class="border-0 align-middle">122465</td>
+                                            <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">122465</a></td>
                                             <td class="border-0 align-middle">Bạch Dương</td>
                                             <td class="border-0 align-middle">11/03/2024</td>
                                             <td class="border-0 align-middle text-success">Hoàn thành</td>
@@ -213,7 +213,7 @@
                                             <td class="border-0 align-middle">
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
-                                            <td class="border-0 align-middle">334564</td>
+                                            <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">334564</a></td>
                                             <td class="border-0 align-middle">Nguyễn Thi</td>
                                             <td class="border-0 align-middle">10/03/2024</td>
                                             <td class="border-0 align-middle text-success">Hoàn thành</td>
