--- a/admin-product-add.html
+++ b/admin-product-add.html
@@ -102,7 +102,7 @@
         </a>
         <div class="col-md-10">
             <div class="d-flex justify-content-between">
-                <input class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
+                <input id="search" class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
 
                 <div class="d-flex ">
                     <a href="#" class="custom-bell-notification text-dark m-auto" aria-expanded="false">
@@ -110,7 +110,7 @@
                         <span class="notification" style="position: absolute;">5</span>
                     </a>
                     <div class="avatar m-auto">
-                        <img src="/img/avatar.png" alt="">
+                        <img src="./img/icon/user.png" alt="">
                     </div>
                     <a class="ml-3 dropdown-toggle text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="mr-3">Sơn Hà <br> Admin</span>
@@ -179,7 +179,7 @@
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 bg-light">
                 <a style="color: #5A607F;" href="./admin-products.html"><span><i class="fa fa-arrow-left" aria-hidden="true"></i></span> Back</a>
-                <h2 id="page-title" class="mt-2 mb-5"><strong>Thêm sản phẩm</strong></h2>
+                <h3 id="page-title" class="font-weight-bold" class="mt-2 mb-5"><strong>Thêm sản phẩm</strong></h2>
                 <form action="POST" id="checkout-form" class="mt-4 mx-2" enctype="multipart/form-data" onsubmit="checkoutFormSubmit()">
                     <h4>Thông tin sản phẩm</h4>
                     <div class="row mt-3">
