--- a/admin-customer-edit.html
+++ b/admin-customer-edit.html
@@ -45,7 +45,7 @@
         </a>
         <div class="col-md-10">
             <div class="d-flex justify-content-between">
-                <input class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
+                <input id="search" class="" type="text" placeholder="Tìm kiếm" aria-label="Search" style="width: unset;background-position: 14px 14px;"/>
 
                 <div class="d-flex ">
                     <a href="#" class="custom-bell-notification text-dark m-auto" aria-expanded="false">
@@ -53,7 +53,7 @@
                         <span class="notification" style="position: absolute;">5</span>
                     </a>
                     <div class="avatar m-auto">
-                        <img src="/img/avatar.png" alt="">
+                        <img src="./img/icon/user.png" alt="">
                     </div>
                     <a class="ml-3 dropdown-toggle text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="mr-3">Sơn Hà <br> Admin</span>
@@ -123,7 +123,7 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 bg-light">
                 <a style="color: #5A607F;" href="./admin-news.html"><span><i class="fa fa-arrow-left" aria-hidden="true"></i></span> Back</a>
                 <div class="d-flex justify-content-between">
-                    <h2 id="page-title">
+                    <h3 id="page-title" class="font-weight-bold">
                         Chi tiết khác hàng
                     </h2>
                     <a id="btn-edit" class="btn btn-light bg-white border ml-2 font-weight-bold text-danger" href="./admin-customer-edit.html">
